--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,11 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    //volly lib
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
+    // glide lib
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 }
