--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "friendlychat.elsaghier.example.com.zomato"
+        applicationId "elsaghier.com.zomato"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -33,4 +33,5 @@ dependencies {
     // glide lib
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    androidTestImplementation 'junit:junit:4.12'
 }
